agregar estructura html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encriptador Challenge</title>
 </head>
-<body>
-    
-</body>
+    <header>
+        <img src="/assets/Logo (1).png" alt="">
+    </header>
+    <body>
+       <section>
+        <div class="text-area"></div>
+            <textarea name="texto" id="" placeholder="Ingrese el texto aqui"></textarea>
+            <div class="info">
+                <img src="/assets/Vector.png" alt="">
+                <p>Solo letras minusculas y sin acentos</p>    
+            </div>
+        <div class="botones"></div>
+            <button class="encriptar">Encriptar</button>
+            <button class="desencriptar">Desencriptar</button>
+       </section>
+       <div class="mensaje-desencriptado"></div>
+            <textarea name="" cols="20" rows="10"></textarea>
+            <img src="/assets/Muñeco.png" alt="">
+            <p>Ningun mensaje fue encontrado</p>
+            <p>Ingresa el texto que quieres encriptar o desencriptar</p>
+            <button class="copiar">Copiar</button>
+    </body
+    <footer>
+        
+    </footer>
 </html>
