--- a/index.html
+++ b/index.html
@@ -4,30 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encriptador Challenge</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Krona+One&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
     <header>
-        <img src="/assets/Logo (1).png" alt="">
+        <img class="logo" src="/assets/Logo (1).png" class="logo"alt="Logo de Alura" >
     </header>
     <body>
        <section>
-        <div class="text-area"></div>
-            <textarea name="texto" id="" placeholder="Ingrese el texto aqui"></textarea>
-            <div class="info">
-                <img src="/assets/Vector.png" alt="">
-                <p>Solo letras minusculas y sin acentos</p>    
+            <div class="text-area">
+                <textarea class="text-area" cols="30" rows="10" placeholder="Ingrese el texto aquí"></textarea>
+                <div class="informacion">
+                    <img src="/assets/Vector.png" alt="">
+                    <p>Solo letras minusculas y sin acentos</p>    
             </div>
-        <div class="botones"></div>
-            <button class="encriptar">Encriptar</button>
-            <button class="desencriptar">Desencriptar</button>
+            <div class="botones"></div>
+                <button class="btn-encriptar">Encriptar</button>
+                <button class="btn-desencriptar">Desencriptar</button>
        </section>
-       <div class="mensaje-desencriptado"></div>
-            <textarea name="" cols="20" rows="10"></textarea>
+       <section class="mensaje-desencriptado">
+            <textarea class="mensaje" cols="20" rows="10"></textarea>
             <img src="/assets/Muñeco.png" alt="">
-            <p>Ningun mensaje fue encontrado</p>
+            <p>Ningún mensaje fue encontrado</p>
             <p>Ingresa el texto que quieres encriptar o desencriptar</p>
             <button class="copiar">Copiar</button>
+        </section>
     </body
     <footer>
-        
+        <p>Desarrollado para Alura Challenge, 2024</p>
     </footer>
 </html>
