--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="/assets/Logo (1).png" alt="Logo de Alura" >
+        <img class="logo" src="Logo.png" alt="Logo de Alura" >
     </header>
     <main class="contenido">
         <section class="rectangulo">
@@ -19,7 +19,7 @@
                 <textarea class="text-area" cols="30" rows="10" placeholder="Ingrese el texto aquí"></textarea>
             </div>
             <div class="informacion">
-                    <img src="/assets/Vector.png" alt="">
+                    <img src="Vector.png" alt="">
                     <p>Solo letras minúsculas y sin acentos</p>    
             </div>
             <div class="botones">
@@ -29,12 +29,12 @@
         </section>
         <section class="mensaje-desencriptado">
             <div class="espera">
-                <img class="muñeco" src="/assets/Muñeco.png" alt="Muñeco">
+                <img class="muñeco" src="Muñeco.png" alt="Muñeco">
                 <p class="alerta">Ningún mensaje fue encontrado</p>
                 <p class="instrucciones">Ingresa el texto que quieres encriptar o desencriptar</p>
             </div class= "respuesta">
-            <textarea class="mensaje" cols="20" rows="10" readonly></textarea>
-            <button class="btn-copiar">Copiar</button></div>
+                <textarea class="mensaje" cols="20" rows="10" readonly></textarea>
+                <button class="btn-copiar">Copiar</button></div>
             <div>
         </section>
     </main>
