--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <p class="instrucciones">Ingresa el texto que quieres encriptar o desencriptar</p>
             </div class= "respuesta">
                 <textarea class="mensaje" cols="20" rows="10" readonly></textarea>
-                <button class="btn-copiar">Copiar</button></div>
+                <button class="btn-copiar" oncliclik="btnCopiar()">Copiar</button></div>
             <div>
         </section>
     </main>
