--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
             <div>
                 <textarea class="text-area" cols="30" rows="10" placeholder="Ingrese el texto aquí"></textarea>
             </div>
-            <div class="informacion">
+            <div>
+                <div class="informacion">
                     <img src="Vector.png" alt="">
                     <p>Solo letras minúsculas y sin acentos</p>    
             </div>
             <div class="botones">
                 <button class="btn-encriptar" onclick="btnEncriptar()">Encriptar</button>
                 <button class="btn-desencriptar" onclick="btnDesencriptar()">Desencriptar</button>
+            </div>
             </div>
         </section>
         <section class="mensaje-desencriptado">
