--- a/index.html
+++ b/index.html
@@ -15,29 +15,22 @@
     </header>
     <main class="contenido">
         <section class="rectangulo">
-            <div>
-                <textarea class="text-area" cols="30" rows="10" placeholder="Ingrese el texto aquí"></textarea>
-            </div>
-            <div>
-                <div class="informacion">
+            <textarea class="text-area" cols="30" rows="10" placeholder="Ingrese el texto aquí"></textarea>
+            <div class="informacion">
                     <img src="Vector.png" alt="">
-                    <p>Solo letras minúsculas y sin acentos</p>    
+                    <p>Solo letras minúsculas y sin acentos</p>
             </div>
             <div class="botones">
                 <button class="btn-encriptar" onclick="btnEncriptar()">Encriptar</button>
                 <button class="btn-desencriptar" onclick="btnDesencriptar()">Desencriptar</button>
             </div>
-            </div>
         </section>
         <section class="mensaje-desencriptado">
-            <div class="espera">
                 <img class="muñeco" src="Muñeco.png" alt="Muñeco">
                 <p class="alerta">Ningún mensaje fue encontrado</p>
                 <p class="instrucciones">Ingresa el texto que quieres encriptar o desencriptar</p>
-            </div class= "respuesta">
                 <textarea class="mensaje" cols="20" rows="10" readonly></textarea>
-                <button class="btn-copiar" oncliclik="btnCopiar()">Copiar</button></div>
-            <div>
+                <button class="btn-copiar" oncliclik="btnCopiar()">Copiar</button>
         </section>
     </main>
     <footer class="footer">
