--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <textarea class="text-area" cols="30" rows="10" placeholder="Ingrese el texto aquí"></textarea>
             <div class="informacion">
                     <img src="Vector.png" alt="">
-                    <p>Solo letras minúsculas y sin acentos</p>
+                    <p class="restricciones">Solo letras minúsculas y sin acentos</p>
             </div>
             <div class="botones">
                 <button class="btn-encriptar" onclick="btnEncriptar()">Encriptar</button>
@@ -30,7 +30,7 @@
                 <p class="alerta">Ningún mensaje fue encontrado</p>
                 <p class="instrucciones">Ingresa el texto que quieres encriptar o desencriptar</p>
                 <textarea class="mensaje" cols="20" rows="10" readonly></textarea>
-                <button class="btn-copiar" oncliclik="btnCopiar()">Copiar</button>
+                <button class="btn-copiar" onclick="btnCopiar()">Copiar</button>
         </section>
     </main>
     <footer class="footer">
