--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <div class="botones">
                 <button class="btn-encriptar" onclick="btnEncriptar()">Encriptar</button>
                 <button class="btn-desencriptar" onclick="btnDesencriptar()">Desencriptar</button>
+                <button class="btn-limpiar" onclick="btnLimpiar()">Limpiar</button>
             </div>
         </section>
         <section class="mensaje-desencriptado">
