--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="Logo.png" alt="Logo de Alura" >
+        <img class="logo" src="/img/Logo.png" alt="Logo de Alura" >
     </header>
     <main class="contenido">
         <section class="rectangulo">
             <textarea class="text-area" cols="30" rows="10" placeholder="Ingrese el texto aquí"></textarea>
             <div class="informacion">
-                    <img src="Vector.png" alt="">
+                    <img src="/img/Vector.png" alt="">
                     <p class="restricciones">Solo letras minúsculas y sin acentos</p>
             </div>
             <div class="botones">
@@ -27,7 +27,7 @@
             </div>
         </section>
         <section class="mensaje-desencriptado">
-                <img class="muñeco" src="Muñeco.png" alt="Muñeco">
+                <img class="muñeco" src="/img/Muñeco.png" alt="Muñeco">
                 <p class="alerta">Ningún mensaje fue encontrado</p>
                 <p class="instrucciones">Ingresa el texto que quieres encriptar o desencriptar</p>
                 <textarea class="mensaje" cols="20" rows="10" readonly></textarea>
