--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </section>
         <section class="mensaje-desencriptado">
-                <img class="muñeco" src="/img/Muñeco.png" alt="Muñeco">
+                <div class="cont-muñeco"><img class="muñeco" src="/img/Muñeco.png" alt="Muñeco"></div>
                 <p class="alerta">Ningún mensaje fue encontrado</p>
                 <p class="instrucciones">Ingresa el texto que quieres encriptar o desencriptar</p>
                 <textarea class="mensaje" cols="20" rows="10" readonly></textarea>
